# starknet-grpc-codegen

./: .gitignore  Cargo.toml  README.md  fix_tests.sh  plan.md  temp_test.txt
docs/: JSON_MARSHALLING_TESTING.md
proto/v0_8_1/: README.md  buf.gen.go.yaml  buf.gen.node.yaml  buf.gen.rust.yaml  buf.gen.ts.yaml  buf.yaml  common.proto  generate-clients.sh  main.proto  trace.proto  write.proto  ws.proto
scripts/: test_json_marshalling.sh
src/: lib.rs  main.rs  spec.rs
src/proto_gen/: mod.rs  service.rs  service.rs.backup  types.rs  writer.rs
src/subcommands/: generate.rs  mod.rs  test.rs
src/testing/: json_generator.rs  mod.rs  round_trip_tester.rs  test_runner.rs
tests/: integration_tests.rs  json_marshalling_tests.rs  proto_json_integration_tests.rs
