[package]
name = "starknet-grpc-codegen"
version = "0.1.0"
authors = ["Tarrence van As <tarrence@cartridge.gg>"]
edition = "2021"
description = """
Tool for generating a GRPC interface from the Starknet JSON-RPC
"""
build = "src/build.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive", "env"] }
indexmap = { version = "1.9.3", features = ["serde"] }
itertools = "0.12.0"
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
built = { version = "0.6.0", features = ["git2"] }

[dev-dependencies]
tempfile = "3.5.0"
pretty_assertions = "1.3.0"
